# peid-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  userdb.txt
crates/peid-rs/: Cargo.toml
crates/peid-rs-cli/: Cargo.toml
crates/peid-rs-cli/src/: main.rs
crates/peid-rs/examples/: dump_sections.rs
crates/peid-rs/src/: authenticode.rs  binary.rs  entropy.rs  fileinfo.rs  imphash.rs  lib.rs  scanner.rs  section_db.rs  signature.rs  toolchain.rs
crates/peid-rs/src/db/: mod.rs  parser.rs
docs/: PLAN.md
