[workspace]
resolver = "2"
members = [
    "crates/peid-rs",
    "crates/peid-rs-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""

[workspace.dependencies]
goblin = "0.8"
memmap2 = "0.9"
walkdir = "2.5"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
md-5 = "0.10"
cms = "0.2"
x509-cert = "0.2"
der = "0.7"
const-oid = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1
